--- a/rnapp/package.json
+++ b/rnapp/package.json
@@ -10,7 +10,12 @@
     "axios": "^0.18.0",
     "react": "16.3.1",
     "react-native": "0.55.3",
-    "react-navigation": "^2.0.0"
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.0.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
